--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "crypto": "^1.0.1",
     "date-fns": "^2.30.0",
     "dotenv": "^16.0.3",
+    "expo-server-sdk": "^3.13.0",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^6.5.0",
