--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
     "otp-generator": "^4.0.1",
+    "plaid": "^30.1.0",
     "slugify": "^1.6.6",
     "uuid": "^9.0.1"
   },
