--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "crypto": "^1.0.1",
     "date-fns": "^2.30.0",
     "dotenv": "^16.0.3",
+    "escape-html": "^1.0.3",
     "expo-server-sdk": "^3.13.0",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.0",
@@ -43,6 +44,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
+    "@types/escape-html": "^1.0.4",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.97",
